--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vidstack/react": "^1.12.12",
     "framer-motion": "^11.5.6",
     "lenis": "^1.1.13",
+    "media-icons": "^1.1.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
