--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "@vidstack/react": "^1.12.12",
-    "framer-motion": "^11.5.6",
     "lenis": "^1.1.13",
     "media-icons": "^1.1.5",
+    "motion": "^11.17.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
